--- a/spidgot/server.properties
+++ b/spidgot/server.properties
@@ -16,7 +16,7 @@ generator-settings=
 resource-pack=
 player-idle-timeout=0
 level-name=world
-motd=A Minecraft Server
+motd=A Minecraft Python Study Server
 force-gamemode=true
 debug=false
 hardcore=false
@@ -34,6 +34,6 @@ max-tick-time=60000
 max-players=20
 enforce-whitelist=false
 resource-pack-sha1=
-online-mode=false
+online-mode=true
 allow-flight=true
 max-world-size=29999984
