--- a/spidgot/server.properties
+++ b/spidgot/server.properties
@@ -2,7 +2,7 @@
 #Sun Oct 31 14:06:16 KST 2021
 view-distance=10
 max-build-height=256
-server-ip=
+server-ip=light.gapmoe.net
 level-seed=
 allow-nether=true
 enable-command-block=false
@@ -34,6 +34,6 @@ max-tick-time=60000
 max-players=20
 enforce-whitelist=false
 resource-pack-sha1=
-online-mode=true
+online-mode=false
 allow-flight=true
 max-world-size=29999984
