Update server setting

--- a/spidgot/server.properties
+++ b/spidgot/server.properties
@@ -2,7 +2,7 @@
 #Sun Oct 31 14:06:16 KST 2021
 view-distance=10
 max-build-height=256
-server-ip=light.gapmoe.net
+server-ip=minecraft_server
 level-seed=
 allow-nether=true
 enable-command-block=false
